--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
       <a-box
-        gps-new-entity-place="latitude: 44.1128; longitude: 44.1128;"
+        gps-new-entity-place="latitude: 44.1127778; longitude: 1.4797222"
         material="color: blue;"
         scale="1 1 1"
       ></a-box>
