--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>AR.js A-Frame – Exemple GPS</title>
     <meta charset="utf-8" />
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
     <a-scene
@@ -19,12 +19,10 @@
 
       <!-- Boîte rouge positionnée aux coordonnées GPS spécifiées -->
       <a-box
-        color="red"
-        depth="10"
-        height="10"
-        width="10"
+      
+        scale="150 150 150"
         gps-new-entity-place="latitude: 44.1127778; longitude: 1.4797222"
-        position="0 0 0"
+        look-at="[gps-camera]"
       ></a-box>
     </a-scene>
   </body>
