Votre message de commit

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <title>AR.js A-Frame – Exemple GPS</title>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
     <a-scene
-      vr-mode-ui="enabled: false"
-      embedded
-      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
-      renderer="antialias: true; alpha: true"
+    embedded
+    loading-screen="enabled: false;"
+    arjs="sourceType: webcam; debugUIEnabled: false;"
     >
       <!-- Caméra GPS -->
-      <a-camera gps-new-camera="gpsMinDistance: 5"></a-camera>
+      <a-camera gps-camera rotation-reader></a-camera>
 
       <!-- Boîte rouge positionnée aux coordonnées GPS spécifiées -->
       <a-box
-      
+      material="color: yellow" 
         scale="150 150 150"
         gps-new-entity-place="latitude: 44.1127778; longitude: 1.4797222"
         look-at="[gps-camera]"
