--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     arjs="sourceType: webcam; debugUIEnabled: false;"
     >
       <!-- Caméra GPS -->
-      <a-camera gps-camera rotation-reader></a-camera>
+      <a-camera gps-new-camera rotation-reader></a-camera>
 
       <!-- Boîte rouge positionnée aux coordonnées GPS spécifiées -->
       <a-box
-      material="color: yellow" 
+        material="color: yellow" 
         scale="150 150 150"
         gps-new-entity-place="latitude: 44.1127778; longitude: 1.4797222"
         look-at="[gps-camera]"
