--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
     >
-      <a-box 
-        material="color: blue"
-        look-at="[gps-camera]"
-        scale="120 120 120"
-        gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+    <a-entity 
+        material='color: red' 
+        geometry='primitive: box'  
+        scale="10 10 10"
+        gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-box>
-      <a-camera gps-camera rotation-reader> </a-camera>
+      <a-camera gps-new-camera='gpsMinDistance: 5'> </a-camera>
     </a-scene>
   </body>
 </html>
