--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
     >
-    <a-entity 
-        material='color: red' 
-        geometry='primitive: box'  
+    <a-image
+    src="asset.jpeg"
+        src="javascript:asset.jpeg" 
         scale="10 10 10"
         gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-box>
       <a-camera gps-new-camera='gpsMinDistance: 5'> </a-camera>
-    </a-scene>
+    </a-image>
   </body>
 </html>
