Votre message de commit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         scale="10 10 10"
         gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-box>
-      <a-camera gps-new-camera='gpsMinDistance: 5'> </a-camera>
+      <a-camera gps-new-camera rotation-reader> </a-camera>
     </a-image>
   </body>
 </html>
