Votre message de commit

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
       vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
     >
-    <a-image
-    src="asset.jpg"
-       
+      <a-image
+        src="asset.jpg"
         scale="10 10 10"
         gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
-      ></a-box>
-      <a-camera gps-new-camera rotation-reader> </a-camera>
-    </a-image>
+      ></a-image>
+      <a-camera gps-new-camera rotation-reader></a-camera>
+    </a-scene>
   </body>
 </html>
