--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
     >
       <a-image
-        src="asset.jpg"
+        src="./src/asset.jpg"
         scale="10 10 10"
         gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-image>
