Votre message de commit

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
       vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
     >
+    <a-assets>
       <a-image
-        src="./asset.jpg"
-        scale="10 10 10"
-        gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
-      ></a-image>
+      src="./asset.jpg"
+      scale="10 10 10"
+      gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+    ></a-image>
+    </a-assets>
+     
       <a-camera gps-new-camera rotation-reader></a-camera>
     </a-scene>
   </body>
