--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
+
     <a-scene
       vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
     >
     <a-assets>
       <a-image
-      src="./asset.jpg"
+      src="asset.jpg"
       scale="10 10 10"
       gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
     ></a-image>
