--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AR.js A-Frame – Exemple GPS</title>
+    <title>AR.js A-Frame – Exemple Modèle 3D avec Géolocalisation</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/gps/gps-location-component.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/gps/gps-entity-place-component.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
+      <!-- Ajoutez votre modèle 3D ici avec des coordonnées GPS -->
+      <a-entity
+        gltf-model="keyboard.glb"
+        scale="0.5 0.5 0.5"
+        gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+      ></a-entity>
 
-    <a-scene
-      vr-mode-ui="enabled: false"
-      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
-    >
-    <a-assets>
-      <a-image
-      src="asset.jpg"
-      scale="10 10 10"
-      gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
-    ></a-image>
-    </a-assets>
-     
-      <a-camera gps-new-camera rotation-reader></a-camera>
+      <!-- Caméra AR avec géolocalisation -->
+      <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
   </body>
 </html>
