--- a/index.html
+++ b/index.html
@@ -4,23 +4,20 @@
     <title>AR.js A-Frame – Exemple Modèle 3D avec Géolocalisation</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/gps/gps-location-component.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/gps/gps-entity-place-component.js"></script>
-   
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
+    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
-   
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
-
+      <!-- Ajoutez votre modèle 3D ici avec des coordonnées GPS -->
       <a-entity
         gltf-model="./src/keyboard.glb"
         scale="0.5 0.5 0.5"
         gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-entity>
 
-      
+      <!-- Caméra AR avec géolocalisation -->
       <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
   </body>
