--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
       <!-- Ajoutez votre modèle 3D ici avec des coordonnées GPS -->
       <a-entity
-        gltf-model="./src/keyboard.glb"
+        gltf-model=".public/keyboard.glb"
         scale="0.5 0.5 0.5"
         gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-entity>
