--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
-    <model-viewer  src="./public/keyboard.glb" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+    <!-- <model-viewer  src="./public/keyboard.glb" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer> -->
 
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
 
