--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
-    <script>
-      THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'
-  </script>
-    <!-- <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script> -->
+
+   
   </head>
   <body style="margin: 0; overflow: hidden;">
-    <!-- <model-viewer  src="./public/keyboard.glb" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer> -->
+   
 
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
 
       <a-entity
-        gltf-model="/arlocationbased/keyboard.glb"
+        gltf-model=".assets/keyboard.glb"
         scale="0.5 0.5 0.5"
         gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-entity>
