--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
 
       <a-entity
-        gltf-model=".assets/keyboard.glb"
+        gltf-model="./assets/keyboard.glb"
         scale="0.5 0.5 0.5"
         gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-entity>
