Votre message de commit

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <a-entity
         gltf-model="/arlocationbased/assets/dog.glb"
         scale="0.5 0.5 0.5"
-        gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+        gps-new-entity-place ="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-entity>
 
 
-      <a-camera gps-camera rotation-reader></a-camera>
+      <a-camera gps-new-camera></a-camera>
     </a-scene> 
   </body>
 </html>
