--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
       <a-entity
         gltf-model="/arlocationbased/assets/dog.glb"
-        scale="0.5 0.5 0.5"
-        gps-projected-entity-place  ="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+        scale="2 2 2"
+        gps-entity-place ="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-entity>
 
 
-      <a-camera gps-projected-camera></a-camera>
+      <a-camera gps-camera></a-camera>
     </a-scene> 
   </body>
 </html>
