--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       ></a-entity>
 
 
-      <a-camera gps-camera></a-camera>
+      <a-camera position="0 0 0"></a-camera>
     </a-scene> 
   </body>
 </html>
