--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <a-entity
         gltf-model="/arlocationbased/assets/dog.glb"
         scale="2 2 2"
-        gps-entity-place ="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+        gps-new-entity-place ="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-entity>
 
 
-      <a-camera position="0 0 0"></a-camera>
+      <a-camera look-controls-enabled="false" gps-new-camera></a-camera>
     </a-scene> 
   </body>
 </html>
