--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar-nft.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js"></script>
 
    
   </head>
@@ -22,7 +22,10 @@
       ></a-entity>
 
 
-      <a-camera look-controls-enabled="false" gps-new-camera></a-camera>
+      <a-camera look-controls-enabled="false" 
+      arjs-device-orientation-controls="smoothingFactor: 0.8;"
+      gps-new-camera="gpsMinDistance: 5">
+    </a-camera>
     </a-scene> 
   </body>
 </html>
