--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AR.js Fix GPS Camera</title>
+    <title>AR.js A-Frame – Exemple Modèle 3D avec Géolocalisation</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar-nft.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js"></script>
+    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
+    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
+
+   
   </head>
-  <body>
-    <a-scene 
-      vr-mode-ui="enabled: false" 
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-    >
+  <body style="margin: 0; overflow: hidden;">
+   
+
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
+
       <a-entity
-        gltf-model="dog.glb"
-        scale="2 2 2"
-        gps-new-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+        gltf-model="/arlocationbased/assets/dog.glb"
+        scale="0.5 0.5 0.5"
+        gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
       ></a-entity>
 
-      <a-camera 
-        look-controls-enabled="false" 
-        arjs-device-orientation-controls="smoothingFactor: 0.8"
-        gps-new-camera="gpsMinDistance: 5"
-      ></a-camera>
-    </a-scene>
 
-    <script>
-      document.querySelector('a-scene').addEventListener('loaded', () => {
-        const camera = document.querySelector('[gps-new-camera]');
-        camera.addEventListener('gps-camera-update-position', (e) => {
-          console.log('GPS actif :', e.detail.position.accuracy);
-        });
-      });
-    </script>
+      <a-camera gps-camera rotation-reader></a-camera>
+    </a-scene> 
   </body>
 </html>
