--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
+
+   
   </head>
   <body style="margin: 0; overflow: hidden;">
+   
+
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
 
-      <!-- Modèle 3D fixe à une position GPS spécifique -->
       <a-entity
-        id="dogModel"
         gltf-model="/arlocationbased/assets/dog.glb"
         scale="0.5 0.5 0.5"
-        gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;">
-      </a-entity>
+        gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+      ></a-entity>
 
-      <!-- Caméra sans la dépendance aux coordonnées GPS -->
+
       <a-camera position="0 0 5" look-controls="pointerLockEnabled: true"></a-camera>
 
     </a-scene> 
