Votre message de commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a-entity id="geo-marker" gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;">
             <!-- Attacher le modèle comme enfant du marqueur GPS -->
             <a-entity
-                gltf-model="model.glb"
+                gltf-model="/arlocationbased/assets/dog.glb"
                 scale="0.5 0.5 0.5"
                 position="0 0 0"
                 rotation="0 0 0">
