--- a/index.html
+++ b/index.html
@@ -1,63 +1,29 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AR.js A-Frame - Modèle 3D avec Géolocalisation</title>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-  <script>
-    window.onload = () => {
-      // Listen for GPS permission
-      document.querySelector('a-scene').addEventListener('gps-camera-update-position', e => {
-        console.log('GPS position updated:', e.detail.position);
-      });
-    };
-  </script>
-  <style>
-    .arjs-loader {
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: rgba(0, 0, 0, 0.8);
-      z-index: 9999;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .arjs-loader div {
-      text-align: center;
-      font-size: 1.25em;
-      color: white;
-    }
-  </style>
+    <title>AR.js A-Frame - Modèle 3D avec Géolocalisation</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
+    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <div class="arjs-loader">
-    <div>Chargement de l'expérience AR, veuillez autoriser l'accès à la géolocalisation...</div>
-  </div>
-  
-  <a-scene
-    vr-mode-ui="enabled: false"
-    arjs="sourceType: webcam; debugUIEnabled: false; videoTexture: true;"
-    renderer="logarithmicDepthBuffer: true;"
-    embedded>
-    
-    <!-- Modèle 3D avec géolocalisation -->
-    <a-entity
-      gltf-model="/arlocationbased/assets/dog.glb"
-      scale="0.5 0.5 0.5"
-      rotation="0 0 0"
-      gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
-      look-at="[gps-camera]">
-    </a-entity>
-    
-    <!-- Caméra AR -->
-    <a-camera gps-camera rotation-reader></a-camera>
-  </a-scene>
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: gps;">
+        <!-- Créer un marqueur de position GPS -->
+        <a-entity id="geo-marker" gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;">
+            <!-- Attacher le modèle comme enfant du marqueur GPS -->
+            <a-entity
+                gltf-model="/arlocationbased/assets/dog.glb"
+                scale="0.5 0.5 0.5"
+                position="0 0 0"
+                rotation="0 0 0">
+            </a-entity>
+        </a-entity>
+
+        <!-- Utiliser une caméra GPS avec rotation-reader -->
+        <a-camera gps-camera rotation-reader></a-camera>
+    </a-scene>
 </body>
 </html>
