--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-    <title>AR.js A-Frame - Modèle 3D avec Géolocalisation</title>
+  <head>
+    <title>AR.js A-Frame – Exemple Modèle 3D avec Géolocalisation</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
-</head>
-<body style="margin: 0; overflow: hidden;">
-    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: gps;">
-        <!-- Créer un marqueur de position GPS -->
-        <a-entity id="geo-marker" gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;">
-            <!-- Attacher le modèle comme enfant du marqueur GPS -->
-            <a-entity
-                gltf-model="/arlocationbased/assets/dog.glb"
-                scale="0.5 0.5 0.5"
-                position="0 0 0"
-                rotation="0 0 0">
-            </a-entity>
-        </a-entity>
 
-        <!-- Utiliser une caméra GPS avec rotation-reader -->
-        <a-camera gps-camera rotation-reader></a-camera>
-    </a-scene>
-</body>
+   
+  </head>
+  <body style="margin: 0; overflow: hidden;">
+   
+
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
+
+      <a-entity
+        gltf-model="/arlocationbased/assets/dog.glb"
+        scale="0.5 0.5 0.5"
+        gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
+      ></a-entity>
+
+
+      <a-camera gps-camera rotation-reader></a-camera>
+
+    </a-scene> 
+  </body>
 </html>
+
