--- a/index.html
+++ b/index.html
@@ -5,26 +5,32 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
-
-   
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
-   
-
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
-
-      <a-entity
-        gltf-model="/arlocationbased/assets/dog.glb"
-        scale="0.5 0.5 0.5"
-        gps-entity-place="latitude: 44.11284337063347; longitude: 1.4798227332225686;"
-      ></a-entity>
-
-
+      
       <a-camera gps-camera rotation-reader></a-camera>
+      <a-entity id="model-container"></a-entity>
 
     </a-scene> 
+
+    <script>
+      window.onload = () => {
+        const camera = document.querySelector("[gps-camera]");
+        const modelContainer = document.getElementById("model-container");
+
+        camera.addEventListener("gps-camera-update-position", (e) => {
+          console.log("Position GPS acquise, ajout du modèle !");
+          const model = document.createElement("a-entity");
+
+          model.setAttribute("gltf-model", "/arlocationbased/assets/dog.glb");
+          model.setAttribute("scale", "0.5 0.5 0.5");
+          model.setAttribute("gps-entity-place", "latitude: 44.11284337063347; longitude: 1.4798227332225686;");
+          
+          modelContainer.appendChild(model);
+        }, { once: true });
+      };
+    </script>
   </body>
 </html>
-
